--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -43,6 +43,11 @@ button {
     color: darkgray;
 }
 
+.search-input:focus{
+    outline: none;
+    box-shadow: none;
+}
+
 .btn {
     font-size: 14px;
 }
@@ -157,30 +162,6 @@ a {
     background-color: transparent;
     border: none;
     display: none;
-}
-
-@media(max-width: 1175px) {
-
-    .bottom-header,
-    .search-bar-holder{
-        display: none;
-    }
-    .navbar-toggler{
-        display: inline-block;
-    }
-    .first-button{
-        display: inline-block;
-    }
-    .logo-img{
-        width: 4rem;
-        height: 4rem;
-    }
-    .mobile-search-toggle{
-        display: inline-block;
-    }
-    .top-header{
-        padding: 0 10% 0 10%;
-    }
 }
 
 /* Icon 1 */
@@ -356,4 +337,249 @@ a {
     transform: rotate(-45deg);
     top: 21px;
     left: 8px;
+}
+
+.input-field {
+    position: relative;
+    width: 100%;
+    height: 44px;
+    line-height: 44px;
+}
+label {
+    position: absolute;
+    top: 0;
+    left: 8;
+    width: 100%;
+    color: gray;
+    transition: 0.2s all;
+    font-weight: lighter;
+    font-size: medium;
+    cursor: text;
+}
+input {
+    width: 100%;
+    border: 0;
+    outline: 0;
+    padding: 0 8px 0 8px;
+    border-radius: 5px;
+    border: lightgrey solid 1px;
+    font-size: small;
+    color: #111;
+}
+
+input:focus{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+input:focus~label,
+input:valid~label {
+    font-size: 10px;
+    top: -15px;
+}
+
+textarea {
+    width: 100%;
+    border: 0;
+    outline: 0;
+    padding: 0 8px 0 8px;
+    border-radius: 5px;
+    border: lightgrey solid 1px;
+    font-size: small;
+    resize: none;
+    color: #111;
+}
+
+textarea:focus{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+textarea:focus~label,
+textarea:valid~label {
+    font-size: 10px;
+    top: -15px;
+}
+
+.request-form{
+    flex-direction: column;
+    border: 1px solid lightgray;
+    padding: 10px;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 420px;
+    gap: 1rem;
+}
+
+.request-form-brand{
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #0d6efd;
+    margin: 0;  
+    align-items: flex-end;
+}
+
+input[type=date]:required:invalid::-webkit-datetime-edit {
+    color: transparent;
+}
+input[type=date]:focus::-webkit-datetime-edit {
+    color: lightgray !important;
+}
+
+.icon-border{
+    padding: 5px;
+    background-color: #0d6efd;
+    border-radius: 100%;
+    width: 54px;
+    height: 54px;
+}
+
+.icon-brand{
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.content {
+    display: -webkit-box;
+    -webkit-line-clamp: 8; /* number of lines to display */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.schedule-wrapper{
+    padding: 0;
+}
+
+.service-title::after{
+    content: url(/src/assets/photo/hr2.png);
+}
+
+.carousel-inner-2{
+    padding: 1em;
+}
+.card{
+    margin: 0 .5em;
+    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+    border: none;
+}
+.carousel-control-prev-2, .carousel-control-next-2{
+    background-color: #e1e1e1;
+    width: 6vh;
+    height: 6vh;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+
+
+.card .img-wrapper {
+    max-width: 100%;
+    height: 13em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+img{
+    max-height: 100%;
+}
+
+@media (min-width: 1072px) {
+    .carousel-inner-2 {
+      display: flex;
+    }
+    .carousel-item-2 {
+      margin-right: 0;
+      flex: 0 0 33.333333%;
+      display: block;
+    }
+    .carousel-control-next-2{
+        right: -80px !important;
+    }
+    
+    .carousel-control-prev-2{
+        left: -80px !important;
+    }
+
+    .card-img-top {
+        min-height: 200.05px;
+        max-width: 285.33px;
+        width: auto; 
+        object-fit: cover !important;
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .card-img-top:hover{
+        transform: scale(1.2);
+    }
+    
+}  
+
+.card-img-top{
+    object-fit: none;
+}
+
+.carousel-control-next-2{
+    right: 50px;
+}
+
+.carousel-control-prev-2{
+    left: 50px;
+}
+
+.icon-wrapper{
+    border: 1px solid #0d6efd;
+    transition: all 0.2s ease-in-out;
+}
+
+.social-media-icon:hover > .icon-wrapper{
+    background-color: white !important;
+    color: #0d6efd !important;
+}
+
+@media(max-width: 992px) {
+    .hotline-label{
+        display: none;
+    }
+    .request-form{
+        max-width: 100%;
+    }
+    
+}
+
+@media(max-width: 775px){
+    .hotline-btn{
+        display: none;
+    }
+}
+
+@media(max-width: 364px){
+    .logo-img{
+        display: none;
+    }
+}
+
+@media(max-width: 1175px) {
+
+    .bottom-header,
+    .search-bar-holder{
+        display: none;
+    }
+    .navbar-toggler{
+        display: inline-block;
+    }
+    .first-button{
+        display: inline-block;
+    }
+    .logo-img{
+        width: 4rem;
+        height: 4rem;
+    }
+    .mobile-search-toggle{
+        display: inline-block;
+    }
+    .top-header{
+        padding: 0 10% 0 10%;
+    }
 }
