--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,20 +6,6 @@ ul, li{
     list-style-type: none;
 }
 
-.accordion-menu-body{
-    text-decoration: none;
-    color: inherit;
-    width: 100%;
-    display: block;
-    padding-left: 1.5rem;
-}
-
-.accordion-menu-item{
-    padding: 10 0 10 0;
-    margin-bottom: 0px;
-    border-bottom: 1px solid lightgrey;
-}
-
 .flex {
     display: flex;
 }
@@ -87,11 +73,6 @@ button {
 a {
     text-decoration: none;
     color: inherit;
-}
-
-.accordion-link::before, 
-.accordion-link::after {
-    content: none;
 }
 
 .dropdown-menu {
@@ -165,187 +146,13 @@ a {
     display: none;
 }
 
-/* Icon 1 */
-
-.animated-icon1,
-.animated-icon2,
-.animated-icon3 {
-    width: 30px;
-    height: 20px;
-    position: relative;
-    margin: 0px;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .5s ease-in-out;
-    -moz-transition: .5s ease-in-out;
-    -o-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-}
-
-.animated-icon1 span,
-.animated-icon2 span,
-.animated-icon3 span {
-    display: block;
-    position: absolute;
-    height: 3px;
-    width: 100%;
-    border-radius: 9px;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-}
-
-.animated-icon1 span {
-    background: #0d6efd;
-}
-
-.animated-icon2 span {
-    background: #e3f2fd;
-}
-
-.animated-icon3 span {
-    background: #f3e5f5;
-}
-
-.animated-icon1 span:nth-child(1) {
-    top: 0px;
-}
-
-.animated-icon1 span:nth-child(2) {
-    top: 10px;
-}
-
-.animated-icon1 span:nth-child(3) {
-    top: 20px;
-}
-
-.animated-icon1.open span:nth-child(1) {
-    top: 11px;
-    -webkit-transform: rotate(135deg);
-    -moz-transform: rotate(135deg);
-    -o-transform: rotate(135deg);
-    transform: rotate(135deg);
-}
-
-.animated-icon1.open span:nth-child(2) {
-    opacity: 0;
-    left: -60px;
-}
-
-.animated-icon1.open span:nth-child(3) {
-    top: 11px;
-    -webkit-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    -o-transform: rotate(-135deg);
-    transform: rotate(-135deg);
-}
-
-/* Icon 3*/
-
-.animated-icon2 span:nth-child(1) {
-    top: 0px;
-}
-
-.animated-icon2 span:nth-child(2),
-.animated-icon2 span:nth-child(3) {
-    top: 10px;
-}
-
-.animated-icon2 span:nth-child(4) {
-    top: 20px;
-}
-
-.animated-icon2.open span:nth-child(1) {
-    top: 11px;
-    width: 0%;
-    left: 50%;
-}
-
-.animated-icon2.open span:nth-child(2) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-.animated-icon2.open span:nth-child(3) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-}
-
-.animated-icon2.open span:nth-child(4) {
-    top: 11px;
-    width: 0%;
-    left: 50%;
-}
-
-/* Icon 4 */
-
-.animated-icon3 span:nth-child(1) {
-    top: 0px;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-}
-
-.animated-icon3 span:nth-child(2) {
-    top: 10px;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-}
-
-.animated-icon3 span:nth-child(3) {
-    top: 20px;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-}
-
-.animated-icon3.open span:nth-child(1) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-    top: 0px;
-    left: 8px;
-}
-
-.animated-icon3.open span:nth-child(2) {
-    width: 0%;
-    opacity: 0;
-}
-
-.animated-icon3.open span:nth-child(3) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    top: 21px;
-    left: 8px;
-}
-
 .input-field {
     position: relative;
     width: 100%;
     height: 44px;
     line-height: 44px;
 }
+
 label {
     position: absolute;
     top: 0;
@@ -357,6 +164,7 @@ label {
     font-size: medium;
     cursor: text;
 }
+
 input {
     width: 100%;
     border: 0;
@@ -440,7 +248,7 @@ input[type=date]:focus::-webkit-datetime-edit {
 
 .content {
     display: -webkit-box;
-    -webkit-line-clamp: 8; /* number of lines to display */
+    -webkit-line-clamp: 8; 
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -448,95 +256,6 @@ input[type=date]:focus::-webkit-datetime-edit {
 
 .schedule-wrapper{
     padding: 0;
-}
-
-.service-title::after{
-    content: url(/src/assets/photo/hr2.png);
-}
-
-.carousel-inner-2{
-    padding: 1em;
-}
-.card{
-    margin: 0 .5em;
-    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
-    border: none;
-}
-.carousel-control-prev-2, .carousel-control-next-2{
-    background-color: #e1e1e1;
-    width: 6vh;
-    height: 6vh;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-
-
-.card .img-wrapper {
-    max-width: 100%;
-    height: 13em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-img{
-    max-height: 100%;
-}
-
-.carousel-custom{
-    max-width: 945px;;
-}
-
-@media (max-width: 1072px){
-    .carousel-custom{
-        max-width: 645px;;
-    }
-}
-
-@media (min-width: 772px) {
-    .carousel-inner-2 {
-      display: flex;
-    }
-    .carousel-item-2 {
-      margin-right: 0;
-      flex: 0 0 33.333333%;
-      display: block;
-    }
-    .carousel-control-next-2{
-        right: -80px !important;
-    }
-    
-    .carousel-control-prev-2{
-        left: -80px !important;
-    }
-
-    .card-img-top {
-        min-height: 200.05px;
-        max-width: 285.33px;
-        width: auto; 
-        object-fit: cover !important;
-        transition: transform 0.3s ease-in-out;
-    }
-
-    .card-img-top:hover{
-        transform: scale(1.2);
-    }
-    
-}  
-
-.card-img-top{
-    object-fit: none;
-}
-
-.carousel-control-next-2{
-    right: 50px;
-}
-
-.carousel-control-prev-2{
-    left: 50px;
 }
 
 .icon-wrapper{
@@ -549,417 +268,14 @@ img{
     color: #0d6efd !important;
 }
 
+.service-title::after{
+    content: url(/src/assets/photo/hr2.png);
+}
+
 .header-warpper {
     background-color: white;
     position: sticky;
-    top: 0; /* Define where you want the element to stick */
-    z-index: 1000; /* Increase if necessary */
+    top: 0; 
+    z-index: 100; 
 }
 
-.menu-list .marker::before{
-    content: "|";
-    margin-right: 1rem;
-    color:  rgb(254 202 202);
-}
-.marker2::before{
-    content: "\2022"; /* Unicode character for a bullet point */
-    color: #000; /* Set the color of the bullet point */
-    display: inline-block;
-    width: 1em; /* Adjust the width as needed */
-    margin-left: -1em;
-}
-.body, html {
-    overflow-x: hidden; /* Ngăn chặn cuộn ngang */
-}
-::-webkit-scrollbar {
-    width: 5px;
-    border-radius: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #0d6efd;
-}
-
-.coccoc-alo-ph-circle {
-    width: 160px;
-    height: 160px;
-    top: 20px;
-    left: 20px;
-    position: absolute;
-    background-color: transparent;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    border-radius: 100%;
-    border: 2px solid rgba(30, 30, 30, 0.4);
-    opacity: .1;
-    -webkit-animation: coccoc-alo-circle-anim 1.2s infinite ease-in-out;
-    -moz-animation: coccoc-alo-circle-anim 1.2s infinite ease-in-out;
-    -ms-animation: coccoc-alo-circle-anim 1.2s infinite ease-in-out;
-    -o-animation: coccoc-alo-circle-anim 1.2s infinite ease-in-out;
-    animation: coccoc-alo-circle-anim 1.2s infinite ease-in-out;
-    -webkit-transition: all .5s;
-    -moz-transition: all .5s;
-    -o-transition: all .5s;
-    transition: all .5s;
-}
-
-.coccoc-alo-phone {
-    background-color: transparent;
-    width: 200px;
-    height: 200px;
-    cursor: pointer;
-    z-index: 200000 !important;
-    -webkit-backface-visibility: hidden;
-    -webkit-transform: translateZ(0);
-    -webkit-transition: visibility .5s;
-    -moz-transition: visibility .5s;
-    -o-transition: visibility .5s;
-    transition: visibility .5s;
-    right: 150px;
-    top: 30px;
-}
-
-.coccoc-alo-phone.coccoc-alo-green .coccoc-alo-ph-circle-fill {
-    background-color: rgba(0, 175, 242, 0.5);
-    opacity: .75 !important;
-}
-
-.coccoc-alo-ph-circle-fill {
-    width: 100px;
-    height: 100px;
-    top: 50px;
-    left: 50px;
-    position: absolute;
-    background-color: #000;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    border-radius: 100%;
-    border: 2px solid transparent;
-    opacity: .1;
-    -webkit-animation: coccoc-alo-circle-fill-anim 2.3s infinite ease-in-out;
-    -moz-animation: coccoc-alo-circle-fill-anim 2.3s infinite ease-in-out;
-    -ms-animation: coccoc-alo-circle-fill-anim 2.3s infinite ease-in-out;
-    -o-animation: coccoc-alo-circle-fill-anim 2.3s infinite ease-in-out;
-    animation: coccoc-alo-circle-fill-anim 2.3s infinite ease-in-out;
-    -webkit-transition: all .5s;
-    -moz-transition: all .5s;
-    -o-transition: all .5s;
-    transition: all .5s;
-}
-
-.coccoc-alo-ph-img-circle {
-    width: 60px;
-    height: 60px;
-    top: 70px;
-    left: 70px;
-    position: absolute;
-    background: rgba(30, 30, 30, 0.1) no-repeat center center;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    border-radius: 100%;
-    border: 2px solid transparent;
-    opacity: .7;
-    -webkit-animation: coccoc-alo-circle-img-anim 1s infinite ease-in-out;
-    -moz-animation: coccoc-alo-circle-img-anim 1s infinite ease-in-out;
-    -ms-animation: coccoc-alo-circle-img-anim 1s infinite ease-in-out;
-    -o-animation: coccoc-alo-circle-img-anim 1s infinite ease-in-out;
-    animation: coccoc-alo-circle-img-anim 1s infinite ease-in-out;
-}
-
-.coccoc-alo-phone.coccoc-alo-green .coccoc-alo-ph-img-circle {
-    background-color: #00aff2;
-}
-
-.coccoc-alo-phone.coccoc-alo-green .coccoc-alo-ph-circle {
-    border-color: #00aff2;
-    opacity: .5;
-}
-
-.coccoc-alo-phone.coccoc-alo-green.coccoc-alo-hover .coccoc-alo-ph-circle,
-.coccoc-alo-phone.coccoc-alo-green:hover .coccoc-alo-ph-circle {
-    border-color: #75eb50;
-    opacity: .5;
-}
-
-.coccoc-alo-phone.coccoc-alo-green.coccoc-alo-hover .coccoc-alo-ph-circle-fill,
-.coccoc-alo-phone.coccoc-alo-green:hover .coccoc-alo-ph-circle-fill {
-    background-color: rgba(117, 235, 80, 0.5);
-    opacity: .75 !important;
-}
-
-.coccoc-alo-phone.coccoc-alo-green.coccoc-alo-hover .coccoc-alo-ph-img-circle,
-.coccoc-alo-phone.coccoc-alo-green:hover .coccoc-alo-ph-img-circle {
-    background-color: #75eb50;
-}
-
-@-moz-keyframes coccoc-alo-circle-anim {
-    0% {
-        transform: rotate(0) scale(.5) skew(1deg);
-        opacity: .1
-    }
-    30% {
-        transform: rotate(0) scale(.7) skew(1deg);
-        opacity: .5
-    }
-    100% {
-        transform: rotate(0) scale(1) skew(1deg);
-        opacity: .1
-    }
-}
-
-@-webkit-keyframes coccoc-alo-circle-anim {
-    0% {
-        transform: rotate(0) scale(.5) skew(1deg);
-        opacity: .1
-    }
-    30% {
-        transform: rotate(0) scale(.7) skew(1deg);
-        opacity: .5
-    }
-    100% {
-        transform: rotate(0) scale(1) skew(1deg);
-        opacity: .1
-    }
-}
-
-@-o-keyframes coccoc-alo-circle-anim {
-    0% {
-        transform: rotate(0) scale(.5) skew(1deg);
-        opacity: .1
-    }
-    30% {
-        transform: rotate(0) scale(.7) skew(1deg);
-        opacity: .5
-    }
-    100% {
-        transform: rotate(0) scale(1) skew(1deg);
-        opacity: .1
-    }
-}
-
-@keyframes coccoc-alo-circle-anim {
-    0% {
-        transform: rotate(0) scale(.5) skew(1deg);
-        opacity: .1
-    }
-    30% {
-        transform: rotate(0) scale(.7) skew(1deg);
-        opacity: .5
-    }
-    100% {
-        transform: rotate(0) scale(1) skew(1deg);
-        opacity: .1
-    }
-}
-
-@-moz-keyframes coccoc-alo-circle-fill-anim {
-    0% {
-        transform: rotate(0) scale(.7) skew(1deg);
-        opacity: .2
-    }
-    50% {
-        transform: rotate(0) scale(1) skew(1deg);
-        opacity: .2
-    }
-    100% {
-        transform: rotate(0) scale(.7) skew(1deg);
-        opacity: .2
-    }
-}
-
-@-webkit-keyframes coccoc-alo-circle-fill-anim {
-    0% {
-        transform: rotate(0) scale(.7) skew(1deg);
-        opacity: .2
-    }
-    50% {
-        transform: rotate(0) scale(1) skew(1deg);
-        opacity: .2
-    }
-    100% {
-        transform: rotate(0) scale(.7) skew(1deg);
-        opacity: .2
-    }
-}
-
-@-o-keyframes coccoc-alo-circle-fill-anim {
-    0% {
-        transform: rotate(0) scale(.7) skew(1deg);
-        opacity: .2
-    }
-    50% {
-        transform: rotate(0) scale(1) skew(1deg);
-        opacity: .2
-    }
-    100% {
-        transform: rotate(0) scale(.7) skew(1deg);
-        opacity: .2
-    }
-}
-
-@keyframes coccoc-alo-circle-fill-anim {
-    0% {
-        transform: rotate(0) scale(.7) skew(1deg);
-        opacity: .2
-    }
-    50% {
-        transform: rotate(0) scale(1) skew(1deg);
-        opacity: .2
-    }
-    100% {
-        transform: rotate(0) scale(.7) skew(1deg);
-        opacity: .2
-    }
-}
-
-@-moz-keyframes coccoc-alo-circle-img-anim {
-    0% {
-        transform: rotate(0) scale(1) skew(1deg)
-    }
-    10% {
-        transform: rotate(-25deg) scale(1) skew(1deg)
-    }
-    20% {
-        transform: rotate(25deg) scale(1) skew(1deg)
-    }
-    30% {
-        transform: rotate(-25deg) scale(1) skew(1deg)
-    }
-    40% {
-        transform: rotate(25deg) scale(1) skew(1deg)
-    }
-    50% {
-        transform: rotate(0) scale(1) skew(1deg)
-    }
-    100% {
-        transform: rotate(0) scale(1) skew(1deg)
-    }
-}
-
-@-webkit-keyframes coccoc-alo-circle-img-anim {
-    0% {
-        transform: rotate(0) scale(1) skew(1deg)
-    }
-    10% {
-        transform: rotate(-25deg) scale(1) skew(1deg)
-    }
-    20% {
-        transform: rotate(25deg) scale(1) skew(1deg)
-    }
-    30% {
-        transform: rotate(-25deg) scale(1) skew(1deg)
-    }
-    40% {
-        transform: rotate(25deg) scale(1) skew(1deg)
-    }
-    50% {
-        transform: rotate(0) scale(1) skew(1deg)
-    }
-    100% {
-        transform: rotate(0) scale(1) skew(1deg)
-    }
-}
-
-@-o-keyframes coccoc-alo-circle-img-anim {
-    0% {
-        transform: rotate(0) scale(1) skew(1deg)
-    }
-    10% {
-        transform: rotate(-25deg) scale(1) skew(1deg)
-    }
-    20% {
-        transform: rotate(25deg) scale(1) skew(1deg)
-    }
-    30% {
-        transform: rotate(-25deg) scale(1) skew(1deg)
-    }
-    40% {
-        transform: rotate(25deg) scale(1) skew(1deg)
-    }
-    50% {
-        transform: rotate(0) scale(1) skew(1deg)
-    }
-    100% {
-        transform: rotate(0) scale(1) skew(1deg)
-    }
-}
-
-@keyframes coccoc-alo-circle-img-anim {
-    0% {
-        transform: rotate(0) scale(1) skew(1deg)
-    }
-    10% {
-        transform: rotate(-25deg) scale(1) skew(1deg)
-    }
-    20% {
-        transform: rotate(25deg) scale(1) skew(1deg)
-    }
-    30% {
-        transform: rotate(-25deg) scale(1) skew(1deg)
-    }
-    40% {
-        transform: rotate(25deg) scale(1) skew(1deg)
-    }
-    50% {
-        transform: rotate(0) scale(1) skew(1deg)
-    }
-    100% {
-        transform: rotate(0) scale(1) skew(1deg)
-    }
-}
-
-
-@media(max-width: 992px) {
-    .hotline-label{
-        display: none;
-    }
-    .request-form{
-        max-width: 100%;
-    }
-    
-}
-
-@media(max-width: 775px){
-    .hotline-btn{
-        display: none;
-    }
-    .double-input{
-        flex-wrap: wrap;
-    }
-}
-
-@media(max-width: 364px){
-    .logo-img{
-        display: none;
-    }
-}
-
-@media(max-width: 1175px) {
-
-    .bottom-header,
-    .search-bar-holder{
-        display: none;
-    }
-    .navbar-toggler{
-        display: inline-block;
-    }
-    .first-button{
-        display: inline-block;
-    }
-    .logo-img{
-        width: 4rem;
-        height: 4rem;
-    }
-    .mobile-search-toggle{
-        display: inline-block;
-    }
-    .top-header{
-        padding: 0 10% 0 10%;
-    }
-}
