--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -269,7 +269,7 @@ input[type=date]:focus::-webkit-datetime-edit {
 }
 
 .service-title::after{
-    content: url(/src/assets/photo/hr2.png);
+    content: url(/assets/photo/hr2.png);
 }
 
 .header-warpper {
