--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -53,8 +53,11 @@
         flex-wrap: wrap;
     }
     .hr1{
-        width: 500px;
+        width: 100%;
     }
+    .hi-wrapper{
+        width: fit-content;
+    }   
 }
 
 @media(max-width: 364px){
